# rp235x-sha256

./: Cargo.toml  README.md
examples/: cryptodongle.rs  test_vectors.rs
src/: lib.rs
