[package]
name = "rp235x-sha256"
version = "0.1.0"
edition = "2024"

[dependencies]
rp235x-hal = "0.2"

[dev-dependencies]
rp235x-hal = {version = "0.2", features = ["binary-info", "critical-section-impl"]}
embedded-hal = "1.0"
panic-halt = "0.2"
usb-device = "0.3"
usbd-serial = "0.2"
heapless = "0.8"
sha2-const = "0.1"

[[example]]
name = "cryptodongle"

[[example]]
name = "test_vectors"
